5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1638_87.log
== TEST (2019-04-13 13:40:16) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
r = b > c > a
g = a > c > b

if(r):
	print(c)
else:
	print(b)
-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:45:44) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
r = b > c > a
g = a > c > b

if(r):
	print(c)
else:
	print(b)
else else: 
	print(a)
-- ERROR:
File "XXXX", line 12
    else else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:45:49) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
r = b > c > a
g = a > c > b

if(r):
	print(c)
else:
	print(b)
else: 
	print(a)
-- ERROR:
File "XXXX", line 12
    else: 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:45:57) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
r = b > c > a
g = a > c > b

if(r):
	print(c)
else:
	print(b)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:46:31) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(z):
	print(c)
else:
	print(b)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 13:46:45) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(z):
	print(c)
else:
	print(b)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:21:46) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(z):
	print(c)
else:
	print(b)

-- OUTPUT:
788
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:24:57) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(a > b > c):
	print(c)
if(b > a > c):
	print(c)
if(c > b > a):
	print(a)
if(b > c > a):
	print(a)
if(c> a > b):
	print(b)
if(a > c >b):
	print(b)
	

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:25:07) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(a > b > c):
	print(c)
if(b > a > c):
	print(c)
if(c > b > a):
	print(a)
if(b > c > a):
	print(a)
if(c> a > b):
	print(b)
if(a > c >b):
	print(b)
	

-- OUTPUT:
35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:25:19) 
-- CODE:
a = int(input("Digite um numero: "))
b = int(input("Digite um numero: "))
c = int(input("Digite um numero: "))
z = a > b > c
g = a > c > b

if(a > b > c):
	print(c)
if(b > a > c):
	print(c)
if(c > b > a):
	print(a)
if(b > c > a):
	print(a)
if(c> a > b):
	print(b)
if(a > c >b):
	print(b)
	

-- EXECUTION TIME:
0.154638
-- TEST CASE 1:
---- input:
258
788
35
---- correct output:
35
---- user output:
35
-- TEST CASE 2:
---- input:
99
55
77
---- correct output:
55
---- user output:
55
-- TEST CASE 3:
---- input:
123
456
789
---- correct output:
123
---- user output:
123
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
